# Spectrogram

./: Cargo.toml  README.md
.cargo/: config.toml
Spectrogram flex pcb/: Spectrogram flex pcb.kicad_pcb  Spectrogram flex pcb.kicad_prl  Spectrogram flex pcb.kicad_pro  Spectrogram flex pcb.kicad_sch  Waveshare_ESP32_S3_miniDev.bak  fp-info-cache  fp-lib-table  sym-lib-table
Spectrogram flex pcb/Waveshare_ESP32_S3_mini.pretty/: INMP441.kicad_mod  WS-ESP32-S3-Mini.kicad_mod  jumper pad.kicad_mod
hardware/3d_print/: foot.stl
hardware/pcb/: Spectrogram flex pcb.kicad_pcb  Spectrogram flex pcb.kicad_prl  Spectrogram flex pcb.kicad_pro  Spectrogram flex pcb.kicad_sch  Spectrogram flex pcb.net  Waveshare_ESP32_S3_miniDev.bak  Waveshare_ESP32_S3_miniDev.kicad_sym  fp-info-cache  ~Spectrogram flex pcb.kicad_sch.lck
hardware/pcb/Waveshare_ESP32_S3_mini.pretty/: Cap touch sensor.kicad_mod  LED strip ghost.kicad_mod  jumper pad.kicad_mod
pcb/: #auto_saved_files#  Sandwich Panel - Controller v1-2 ESP32-cache.lib  Sandwich Panel - Controller v1-2 ESP32.kicad_pcb  Sandwich Panel - Controller v1-2 ESP32.kicad_prl  Sandwich Panel - Controller v1-2 ESP32.kicad_pro  Sandwich Panel - Controller v1-2 ESP32.kicad_sch  Sandwich Panel - Controller v1-2 ESP32.net  Sandwich Panel - Controller v1-2 ESP32.pro  Sandwich Panel - Controller v1-2 ESP32.sch  _autosave-Sandwich Panel - Controller v1-2 ESP32.kicad_pcb  fp-info-cache  fp-lib-table  ~Sandwich Panel - Controller v1-2 ESP32.kicad_sch.lck
pcb/images/: refactor-outline.dxf
pcb/parts/inmp441/: INMP441.kicad_sym  INMP441.step  MIC_INMP441.kicad_mod
software/micropython/: leds.py  main.py  menu.py  mic.py  nearest_tone_index_calculator.py  nearest_tone_index_represents.py  run.sh  touch.py
software/micropython/utils/: LED_note_hue_picker.py  LED_test_flash_all.py  binned_indexes_of_tones_nearest_to_musical_notes.json  binned_indexes_represent_which_musical_tones.json  border_calculator.py  border_values.json  computed_values.json  huelearner.py  individual_LED_test.py  llm_claude_testcode.py  menu_calculator.py  nearest_tone_index_calculator.py  nearest_tone_index_represents.py  precomputed_octave_display.json  speedup_redo_values.json  test_redo_borderfrequencies_required.json  test_redo_values.json  test_speedup_redo_values.json  trying for better divisions between A and Asharp.json
src/: main.rs
src/micropython/: LED_test_flash_all.py  individual_LED_test.py  leds.py  main.py  menu.py  mic.py  touch.py
src/micropython/async/: debug.py  diagram.json  fft.py  leds.py  main.py  mic.py  touch.py  wokwi.toml
src/micropython/basic_leds/: boot.py
src/micropython/mic/: I2S_spectrogram.py  I2S_spectrogram3.py  mocleiri_2sec.py  test_mic_script.py
src/micropython/tests/: LED_test_demo_reel.py
src/rust/: .gitignore  Cargo.toml  README.md
src/rust/src/: fft.rs  lib.rs  main.rs
src/sync_rust/: Cargo.toml
src/sync_rust/.cargo/: config.toml
src/sync_rust/data/: bjoernQ.data
src/sync_rust_esp32c3/: Cargo.toml  Cargo.toml.mine
src/sync_rust_esp32c3/.cargo/: config.toml
src/sync_rust_esp32c3/data/: bjoernQ.data
src/sync_rust_esp32c3/src/: main.rs
src/sync_rust_host/: Cargo.toml  out.raw
src/sync_rust_host/src/: main.rs
