[package]
name = "pancake-leds"
version = "0.1.0"
authors = ["brainstorm <brainstorm@nopcode.org>"]
edition = "2021"
license = "GPLv3"

[dependencies]
embassy-executor = { version = "0.5" , features = ["task-arena-size-8192"] }
esp-backtrace = { version = "0.12", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [ "esp32s3", "embedded-io-async", "async" ] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [ "esp32s3", "time-timg0" ] }
#esp-hal = { path = "../../../esp-hal", features = [ "esp32s3", "embassy", "embassy-time-timg0", "embedded-io-async", "async" ] }
esp-println = { version = "0.9", features = ["esp32s3"] }
embedded-io = "0.6"
microfft = { version = "0.6", default-features = false, features = [ "size-4096" ] }
smart-leds = "0.4"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal", branch = "main", version = "0.11.0", features = ["esp32s3"] }
#spectrum-analyzer = { version = "1.5.0", features = ["no-std"] }

[patch.'https://github.com/esp-rs/esp-hal']
esp-hal = { path = "../../../esp-hal/esp-hal" }
esp-hal-smartled = { path = "../../../esp-hal/esp-hal-smartled" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false